[workspace]
members = ["tracing-udp"]

[package]
name = "juker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
hmac-sha256 = "1.1.12"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-macros = "2.6.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-udp = { path = "tracing-udp" }
uuid = { version = "1.19.0", features = ["v4"] }
zeromq = { version = "0.4.1", default-features = false, features = [
    "tokio-runtime",
    "tcp-transport",
] }
